# itu_cafeteria_bot

./: .gitignore  BUGUN_YAPILACAKLAR.md  PROJE_YAPISI_DETAYLI_ANALIZ.md  README.md  SON_DURUM_VE_YAPILACAKLAR.md  docker-compose.yml  frames_2026-01-21_07.25.02.gv
apriltag_detection/: package.xml  setup.cfg  setup.py
apriltag_detection/apriltag_detection/: detect_apriltag.py  detect_apriltag_3d.py  follow_apriltag.py  process_image.py
apriltag_detection/config/: tracker_params.yaml
apriltag_detection/launch/: tracker.launch.py
cafeteria_interfaces/: CMakeLists.txt  package.xml
cafeteria_interfaces/msg/: CollisionAlert.msg  FoodStatus.msg  RobotState.msg
cafeteria_interfaces/srv/: OperatorCommand.srv  StartDelivery.srv
cafeteria_robot_fsm/: package.xml  setup.cfg  setup.py
cafeteria_robot_fsm/cafeteria_robot_fsm/: __init__.py  collision_detection.py  collision_detection_mock.py  fsr_sensor_mock.py  operator_panel.py  robot_state_machine.py
cafeteria_robot_fsm/launch/: fsm_only.launch.py  master.launch.py
cafeteria_simulation/: CMakeLists.txt  package.xml
cafeteria_simulation/config/: controller_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
cafeteria_simulation/launch/: gazebo_world.launch.py  localization_launch.py  navigation_launch.py  simulation.launch.py
cafeteria_simulation/worlds/: map_save.pgm  map_save.yaml  map_serial.data  med_cafeteria.world  med_cafeteria_mapping.world  serial_map.data
waiter_robot_description/: package.xml  setup.cfg  setup.py
waiter_robot_description/launch/: display.launch.py  robot_state_publisher.launch.py
waiter_robot_description/urdf/: bumper.xacro  camera.xacro  gazebo_control.xacro  lidar.xacro  map_display.rviz  ros2_control.xacro  waiter_robot.xacro  waiter_robot_core.xacro  waiter_robot_display.rviz
waiter_robot_description/waiter_robot_description/: state_publisher.py
