cmake_minimum_required(VERSION 3.8)
project(cafeteria_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)

# Generate interfaces (messages and services)
rosidl_generate_interfaces(${PROJECT_NAME}
  # Messages
  "msg/FoodStatus.msg"
  "msg/CollisionAlert.msg"
  "msg/RobotState.msg"
  # Services
  "srv/OperatorCommand.srv"
  "srv/StartDelivery.srv"
  DEPENDENCIES geometry_msgs std_msgs builtin_interfaces
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
