<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cafeteria_interfaces</name>
  <version>0.0.1</version>
  <description>Custom ROS2 message and service definitions for the ITU Cafeteria Robot</description>
  <maintainer email="hakan66@example.com">Hakan</maintainer>
  <license>MIT</license>

  <!-- Build tools for interface generation -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies for message types we use -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Runtime dependency for generated code -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Member of rosidl interface group -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
