<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cafeteria_robot_fsm</name>
  <version>0.0.1</version>
  <description>High-Level State Machine for ITU Cafeteria Robot - orchestrates navigation, theft prevention, and operator intervention</description>
  <maintainer email="hakan66@example.com">Hakan</maintainer>
  <license>MIT</license>

  <!-- Build type for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 Core Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  
  <!-- Our custom interfaces (will be created in Step 2) -->
  <depend>cafeteria_interfaces</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
